syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "user.proto";

option go_package = "github.com/dxtym/bankrupt/pb";

message UUID {
    string value = 1;
}

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    UUID session_id = 1;
    string access_token = 2;
    google.protobuf.Timestamp access_token_expires_at = 3;
    string refresh_token = 4;
    google.protobuf.Timestamp refresh_token_expires_at = 5;
    User user = 6;
}